--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	 <div class="holder">
+	   <p class="item item3">3</p>
+	   <p class="item item1">1</p>
+	   <p class="item item2">2</p>
+   </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
